"fixed layout issues"

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background-image: linear-gradient(to right, #6E41C3 , #9B51B5);;
 }
 
 .App-logo {
